Fix message alignment when table is empty

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,6 +48,9 @@ body {
   margin-bottom: 0;
   padding-left: 20px;
 }
+.table-message {
+  padding: 5em 1em;
+}
 .table > tbody + tbody {
   border-top-width: 1px;
 }
